2005-04-08  Stipe Tolj  <stolj@wapme.de>
    * gwlib/md5.c: fixing bug #207, causing md5() to return corrupted values
      since we assumed digest is a NULL-terminated C string, which is of
      course not the case in gernal. Thanks to Vincenzo for reporting this.
       
2005-04-07  Stipe Tolj  <stolj@wapme.de> 
    * radius/radius_[acct|pdu].c: fixing bug #208, which caused a wrong 
      computing of the MD5 authenticator of the NAS acct packet. Thanks a
      lot to Vincenzo <morellov@tin.it> for bug report and also fix. This
      was a very stupid interpretation of the RFC2866 by me.
    
2005-04-07  Stipe Tolj  <stolj@wapme.de> 
    * gwlib/http.c: fixing bug #213 breaking HTTP response handling when there
      has been a response header 'Content-Length: 0' given. Thanks to Jonathan
      for this report and provding also a patch for the problem.
      [Msg-Id: <42541321.2080102@wirelessonenet.com>]

2005-04-01  Stipe Tolj  <stolj@wapme.de> 
    * test/wapproxy.c: added option -p for UDP port of wapproxy to list to.
      Can be used to proxy WDP packets on the same machine/interface. 

2005-03-29  Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: fixed horrible bug in 'http_cgivar_dump' that
      used 'gwlist_extract_first' instead of 'gwlist_get'.

2005-03-28  Alexander Malysh <amalysh at kannel.org>
    * gwlib/dbpool.h: fixed compiler warnings.

2005-03-22  Stipe Tolj  <stolj@wapme.de> 
    * wmlscript/wsstdlib.[ch]: updated and added latest WTAI functions as 
      defined in WAP-268-WTAI, WAP-269-WTAIIS136, WAP-270-WTAIPDC, 
      WAP-228-WTAIIS95-20010908 and WAP-255-WTAIGSM. Thanks to Dermot Wrycraft
      <Dermot.Wrycraft@magdalene.co.uk> for providing the hint for update.
    
2005-03-21  Stipe Tolj  <stolj@wapme.de> 
    * gwlib/octstr.{ch]: adding octstr_str_case_compare() to allow insensitive
      string compare with const char. Patch by Fred <fred@5thfinger.com>.
      [Msg-Id: <020f01c51acf$98f1c0e0$0401a8c0@FRED4>]
      