@@ -311,6 +311,7 @@ int main(int argc, char **argv)
     long proxy_port;
     Octstr *proxy_username;
     Octstr *proxy_password;
+    Octstr *exceptions_regex;
     char *p;
     long threads[MAX_THREADS];
     time_t start, end;
@@ -325,6 +326,7 @@ int main(int argc, char **argv)
     exceptions = gwlist_create();
     proxy_username = NULL;
     proxy_password = NULL;
+    exceptions_regex = NULL;
     num_threads = 1;
     file = 0;
     fp = NULL;
@@ -386,7 +388,11 @@ int main(int argc, char **argv)
 		p = strtok(NULL, ":");
 	    }
 	    break;
-	
+
+   case 'E':
+       exceptions_regex = octstr_create(optarg);
+       break;
+
 	case 'a':
 	    p = strtok(optarg, ":");
 	    if (p != NULL) {
@@ -460,11 +466,12 @@ int main(int argc, char **argv)
     
     if (proxy != NULL && proxy_port > 0) {
         http_use_proxy(proxy, proxy_port, exceptions,
-        proxy_username, proxy_password);
+        proxy_username, proxy_password, exceptions_regex);
     }
     octstr_destroy(proxy);
     octstr_destroy(proxy_username);
     octstr_destroy(proxy_password);
+    octstr_destroy(exceptions_regex);
     gwlist_destroy(exceptions, octstr_destroy_item);
     
     urls = argv + optind;
